# cpp.fundamentals

./: 10_task_1_account.cpp  10_task_1_account.h  10_task_1_includes.h  10_task_1_main.cpp  10_task_2_includes.h  10_task_2_main.cpp  10_task_2_person.cpp  10_task_2_person.h  10_task_3_golf.cpp  10_task_3_golf.h  10_task_3_includes.h  10_task_3_main.cpp  10_task_4_includes.h  10_task_4_main.cpp  10_task_4_sales.cpp  10_task_4_sales.h  10_task_5_includes.h  10_task_5_main.cpp  10_task_5_stack.cpp  10_task_5_stack.h  10_task_6_includes.h  10_task_6_main.cpp  10_task_6_move.cpp  10_task_6_move.h  10_task_7_includes.h  10_task_7_main.cpp  10_task_7_plorg.cpp  10_task_7_plorg.h  10_task_8_includes.h  10_task_8_list.h  10_task_8_main.cpp  11_task_1_includes.h  11_task_1_main.cpp  11_task_1_vector.cpp  11_task_1_vector.h  11_task_2_includes.h  11_task_2_main.cpp  11_task_2_vector.cpp  11_task_2_vector.h  11_task_3_includes.h  (+207 more)
9_task_1/: golf.cpp  golf.h  main.cpp
9_task_4/: main.cpp  sales.cpp  sales.h
Avid_the_best/: Avid_the_best.opensdf  Avid_the_best.sln
Avid_the_best/Avid_the_best/: AvidContextMenu.cpp  AvidContextMenu.h  AvidFile.cpp  AvidFile.h  Avid_the_best.def  Avid_the_best.vcxproj  Avid_the_best.vcxproj.filters  ClassFactory.cpp  ClassFactory.h  FileProc.cpp  FileProc.h  class_factory.cpp  class_factory.h  dllmain.cpp  includes.h  register.cpp  register.h  registry.cpp  registry.h
Days_02-03/task_1/: task_1.sln
Days_02-03/task_1/task_1/: Source.cpp  task_1.vcxproj
Days_02-03/task_2/: task_2.sln
Days_02-03/task_2/task_2/: task_2.vcxproj  task_2.vcxproj.filters
Days_02_03/: CMakeLists.txt  Days_01_02_task_1.cpp  Days_01_02_task_4.cpp  Days_02_03_task_2.cpp
