cmake_minimum_required (VERSION 2.6)

project (all_programming_exercises)

set_property(GLOBAL PROPERTY USE_FOLDERS OFF)

message (cxx Flags  ${CMAKE_CXX_FLAGS})

add_executable (2_task_1 2_task_1.cpp)
add_executable (2_task_2 2_task_2.cpp)
add_executable (2_task_3 2_task_3.cpp)
add_executable (2_task_4 2_task_4.cpp)
add_executable (2_task_5 2_task_5.cpp)
add_executable (2_task_6 2_task_6.cpp)