cmake_minimum_required (VERSION 2.6)

project (all_programming_exercises)

set_property(GLOBAL PROPERTY USE_FOLDERS OFF)

message (cxx Flags  ${CMAKE_CXX_FLAGS})

add_executable (2_task_1 2_task_1.cpp)
add_executable (2_task_2 2_task_2.cpp)
add_executable (2_task_3 2_task_3.cpp)
add_executable (2_task_4 2_task_4.cpp)
add_executable (2_task_5 2_task_5.cpp)
add_executable (2_task_6 2_task_6.cpp)
add_executable (2_task_7 2_task_7.cpp)
add_executable (3_task_1 3_task_1.cpp)
add_executable (3_task_2 3_task_2.cpp)
add_executable (3_task_3 3_task_3.cpp)
add_executable (3_task_4 3_task_4.cpp)
add_executable (3_task_5 3_task_5.cpp)
add_executable (3_task_6 3_task_6.cpp)
add_executable (3_task_7 3_task_7.cpp)
add_executable (4_task_1 4_task_1.cpp)
add_executable (4_task_2 4_task_2.cpp)
add_executable (4_task_3 4_task_3.cpp)
add_executable (4_task_4 4_task_4.cpp)
add_executable (4_task_5 4_task_5.cpp)
add_executable (4_task_6 4_task_6.cpp)
add_executable (4_task_7 4_task_7.cpp)
add_executable (4_task_8 4_task_8.cpp)
add_executable (4_task_9 4_task_9.cpp)
add_executable (4_task_10 4_task_10.cpp)
add_executable (5_task_1 5_task_1.cpp)
add_executable (5_task_2 5_task_2.cpp)
add_executable (5_task_3 5_task_3.cpp)
add_executable (5_task_4 5_task_4.cpp)
add_executable (5_task_5 5_task_5.cpp)
add_executable (5_task_6 5_task_6.cpp)
add_executable (5_task_7 5_task_7.cpp)
add_executable (5_task_8 5_task_8.cpp)
add_executable (5_task_9 5_task_9.cpp)
add_executable (5_task_10 5_task_10.cpp)