cmake_minimum_required (VERSION 2.6)

project (Days_01_02)

add_executable (Days_01_02_task_1 Days_01_02_task_1.cpp)
add_executable (Days_01_02_task_2 Days_01_02_task_2.cpp)
add_executable (Days_01_02_task_3 Days_01_02_task_3.cpp)
add_executable (Days_01_02_task_4 Days_01_02_task_4.cpp)

set_property(GLOBAL PROPERTY USE_FOLDERS OFF)
